<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <!--  header  -->
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="5dp"
        android:text="@string/judul"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/judul_bawah"
        android:text="@string/judul_bawah"
        android:layout_below="@id/judul"
        android:layout_marginLeft="70dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

<!--  content  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/kartu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/judul_bawah"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/gray_border">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="260dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/wallpaper_hp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/judul_notif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/kartu"
        android:paddingLeft="25dp"
        android:paddingTop="20dp"
        android:text="@string/tanpa_notif"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/id_btn"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_below="@id/judul_notif"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/btn_pengaturan" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/judul_notif"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="112dp"
        android:src="@drawable/eye" />

    <TextView
        android:text="@string/jumlah_lihat"
        android:layout_below="@id/judul_notif"
        android:textColor="@color/white"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_below="@id/id_btn"
        android:text="@string/isi_utama"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:paddingLeft="24dp"
        android:textSize="17sp"
        android:paddingRight="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

<!--  footer  -->
    <View
        android:id="@+id/line_satu"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@color/gray_border" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_marginLeft="160dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:src="@drawable/like" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/suka_18k"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>